--- a/index.html
+++ b/index.html
@@ -113,16 +113,20 @@
         </a>
     </div>
 
-    <div class="description-container"> 
+    <div class="description-container">  
         <div class ="description-title">
             <p>
             Why Should I Care About Service-Learning?
             </p>
         </div>
         
-        <div class="image-container">
+        <!----
+        <div class="description-image-container">
             <img class="description-image" src = "sl_overview.jpg">
         </div>
+        -->
+
+        <img class="description-image" src = "sl_overview.jpg">
 
         <div class="description-text">
             <p>
@@ -133,11 +137,12 @@
             classroom to the real world.
             </p>
         </div>
+
+        <div class="description-curve-container">
+            <svg class = "description-curve" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#2645bf" fill-opacity="1" d="M0,192L48,160C96,128,192,64,288,74.7C384,85,480,171,576,202.7C672,235,768,213,864,186.7C960,160,1056,128,1152,133.3C1248,139,1344,181,1392,202.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg> 
+        </div>
     </div>
 
-    <section>
-        <svg class = "description-curve" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#2645bf" fill-opacity="1" d="M0,192L48,160C96,128,192,64,288,74.7C384,85,480,171,576,202.7C672,235,768,213,864,186.7C960,160,1056,128,1152,133.3C1248,139,1344,181,1392,202.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg> 
-    </section>
 </main>
 
     <footer id="footer">
