--- a/services.html
+++ b/services.html
@@ -31,8 +31,8 @@
         </nav>
 
         <div class="search-container">
-            <form action="" class="search-bar">
-                <input type="text" placeholder="Search for a service" name="search">
+            <div action="" class="search-bar">
+                <input type="text" placeholder="Search for a service" name="search" onkeyup="search()">
                 <button type="submit">
                     <img src ="search.png">
                 </button> 
@@ -104,7 +104,7 @@
 
 
     </article>
-    
+    <script src="services.js"></script>
 </body>
 
 </html>
