--- a/MJC Website/index.html
+++ b/MJC Website/index.html
@@ -35,7 +35,8 @@
                 <li class="navigation-button"> <a class="navigation-text" href="index.html" > Home </a> </li>
                 <li class="navigation-button"> <a class="navigation-text" href="services.html" > Services </a> </li>
                 <li class="navigation-button"> <a class="navigation-text" href="https://www.mjc.edu/" > MJC </a> </li>
-                <li class="navigation-button"> <a class="navigation-text" href="https://muhamamdmuaaz03.github.io/MJC-Service-Learning/" > About </a> </li>
+                <li class="navigation-button"> <a class="navigation-text" href="login.html" > Login </a> </li>
+                <!-- https://muhamamdmuaaz03.github.io/MJC-Service-Learning/ -->
             </ul>
 
             <div class = "navigation-hamburger">
@@ -54,7 +55,6 @@
         </p>
 
         <div class="curve-container">
-            <!--<svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3b92ad" fill-opacity="1" d="M0,288L48,261.3C96,235,192,181,288,176C384,171,480,213,576,197.3C672,181,768,107,864,101.3C960,96,1056,160,1152,197.3C1248,235,1344,245,1392,250.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg> -->
             <svg class = "header-curve" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path id ="curve" fill="#0096C9" fill-opacity="1" d="M0,160L48,165.3C96,171,192,181,288,202.7C384,224,480,256,576,234.7C672,213,768,139,864,133.3C960,128,1056,192,1152,202.7C1248,213,1344,171,1392,149.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg> 
         </div>
     </div>
@@ -119,12 +119,6 @@
             Why Should I Care About Service-Learning?
             </p>
         </div>
-        
-        <!----
-        <div class="description-image-container">
-            <img class="description-image" src = "sl_overview.jpg">
-        </div>
-        -->
 
         <img class="description-image" src = "sl_overview.jpg">
 
