--- a/MJC Website/login.html
+++ b/MJC Website/login.html
@@ -9,11 +9,13 @@
 
     <link rel = "stylesheet" type = "text/css" href = "login.css" >
 
+    <title> Login </title>
+
 </head>
 
   <body>
 
-    <div class="center">
+    <div class="container">
       <h1>Login</h1>
       <form method="post">
 
@@ -32,7 +34,7 @@
         <div class="pass">Forgot Password?</div>
         <input type="submit" value="Login">
         <div class="signup_link">
-          Not a member? <a href="#">Signup</a>
+          Don't have an account? <a href="#">Sign-up</a>
         </div>
 
       </form>
