--- a/MJC Website/services.html
+++ b/MJC Website/services.html
@@ -21,13 +21,20 @@
 
 <body>
     <article>
-        <nav>
+        <nav class="navigation-menu">
             <ul class = "navigation-bar"> 
                 <li class="navigation-button"> <a class="navigation-text" href="index.html" > Home </a> </li>
                 <li class="navigation-button"> <a class="navigation-text" href="services.html" > Services </a> </li>
                 <li class="navigation-button"> <a class="navigation-text" href="https://www.mjc.edu/" > MJC </a> </li>
-                <li class="navigation-button"> <a class="navigation-text" href="https://muhamamdmuaaz03.github.io/MJC-Service-Learning/" > About </a> </li>
+                <li class="navigation-button"> <a class="navigation-text" href="login.html" > Login </a> </li>
+                <!-- https://muhamamdmuaaz03.github.io/MJC-Service-Learning/ -->
             </ul>
+
+            <div class = "navigation-hamburger">
+                <span class="navigation-line"> </span>
+                <span class="navigation-line"> </span>
+                <span class="navigation-line"> </span>
+            </div>
         </nav>
 
         <div class="search-container">
@@ -48,48 +55,48 @@
             <form>
                 <ul class="filter-list">
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Agriculture</label>
+                        <input type="checkbox" class="filter-bubble" id="filter1">
+                        <label for="filter1" class="filter-text">School of Agriculture</label>
                     </li>
 
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Arts, Performance, & the Humanities</label>
+                        <input type="checkbox" class="filter-bubble" id="filter2">
+                        <label for="filter2" class="filter-text">School of Arts, Performance, & the Humanities</label>
                     </li>
 
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Behavioral and Social Science</label>
+                        <input type="checkbox" class="filter-bubble" id="filter3">
+                        <label for="filter3" class="filter-text">School of Behavioral and Social Science</label>
                     </li>
 
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Business and Computing</label>
+                        <input type="checkbox" class="filter-bubble" id="filter4">
+                        <label for="filter4" class="filter-text">School of Business and Computing</label>
                     </li>
 
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Fitness and Health Professions</label>
+                        <input type="checkbox" class="filter-bubble" id="filter5">
+                        <label for="filter5" class="filter-text">School of Fitness and Health Professions</label>
                     </li>
 
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Industry and Trades</label>
+                        <input type="checkbox" class="filter-bubble" id="filter6">
+                        <label for="filter6" class="filter-text">School of Industry and Trades</label>
                     </li>
 
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Language Arts and Education</label>
+                        <input type="checkbox" class="filter-bubble" id="filter7">
+                        <label for="filter7" class="filter-text">School of Language Arts and Education</label>
                     </li>
 
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Public Safety</label>
+                        <input type="checkbox" class="filter-bubble" id="filter8">
+                        <label for="filter8" class="filter-text">School of Public Safety</label>
                     </li>
 
                     <li class="filter-item">
-                        <input type="checkbox" class="filter-bubble">
-                        <label class="filter-text">School of Science and Mathematics</label>
+                        <input type="checkbox" class="filter-bubble" id="filter9">
+                        <label for="filter9" class="filter-text">School of Science and Mathematics</label>
                     </li>
                 </ul>
 
@@ -102,6 +109,8 @@
 
         </section>        
 
+
+        <script src = "index.js"> </script>
 
     </article>
     
